--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "csv-parse": "^5.5.2",
-    "pdfkit": "^0.13.0",
     "archiver": "^6.0.1",
+    "csv-parse": "^5.5.2",
+    "express": "^4.18.2",
     "jimp": "^0.22.10",
-    "uuid": "^9.0.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.13.0",
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
