feat: Remove outdated instruction files and improve directory tracking with .gitkeep files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 node_modules/
-uploads/
-output/
-templates/
+uploads/*
+!uploads/.gitkeep
+output/*
+!output/.gitkeep
+templates/*
+!templates/.gitkeep
+fonts/*
+!fonts/.gitkeep
 *.log
 .DS_Store
 .env
